# HX-Music

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  test.db  vcpkg.json
HX-Music-Client/: .gitignore  CMakeLists.txt  README.md
HX-Music-Client/appBulid/: .gitignore  PKGBUILD
HX-Music-Client/cmake/: install.cmake
HX-Music-Client/qml/: Main.qml  coutQmlQrc.py  qml.qrc
HX-Music-Client/resources/: resources.qrc
HX-Music-Client/src/: main.cpp
HX-Music-Server/: CMakeLists.txt  REAMDE.md  docker-compose.yaml  docker-compose.yml  dockerfile  tmp
HX-Music-Server/cmake/: develop.cmake  install.cmake
HX-Music-Server/doc/: api.md
HX-Music-Server/docker/: REAMDE.md  docker-compose.yaml  (+1 more)
cmake/: develop.cmake  install.cmake
pyTool/: 6.ass  README.md  aegisub-cli  ass_ruby_karaoke.py  callLua.py  ds_ass.py  fomatAssTime.py  gpt_ass.py  main.py  nihongoAss.py  out.ass  output.ass  output_ok.ass  output_tmp.ass  pyproject.toml  requirements.txt  sb_ass.py  t.py  test.ass  toTwo.py  zuyinpy.py  いとうかなこ - ファティマ (107164231).ass
pyTool/del/: ass_ruby_karaoke.py
pyTool/libs/e2k/: .gitignore
pyTool/lua/: set-karaoke-style.lua
pyTool/src/lddcCmd/: autoFetch.py  downloadLyrics.py  localMatcAss.py  saveAss.py
pyTool/src/mark/: AssMark.py  jpMark.py
pyTool/src/utils/: basePath.py  callLua.py
pyTool/tests/: Bravely You (勇敢的你) - VISUAL ARTSKey Sounds LabelLia.ass  cmdLDDC.py  eToKaNa.py  jToKaNa.py
resources/: coutQmlQrc.py  resources.qrc
src/: _main.cpp  main.cpp
(+256 files in other folders)
